tests/samples/compile_errors/const_expression/calls_function.bas
Attribute VB_Name = "ConstWithFunc"
Sub TestConst()
    Const X As Long = MsgBox("hello")  ' function call in Const RHS
End Sub
